# saucedemo-ui-tests-with-selenium

./: .dockerignore  Dockerfile  Makefile  README.md  RELEASE.md  docker-compose.yml  env.example  pyproject.toml
data/: tests_data.py
locators/: page_locators.py
pages/: base_page.py  cart_page.py  checkout_page.py  inventory_page.py  login_page.py  order_page.py  overview_page.py  product_page.py
tests/: conftest.py  test_base.py  test_cart.py  test_checkout.py  test_inventory.py  test_login.py  test_order.py  test_overview.py  test_product.py
utils/: generator.py  logger.py
